# melior

macro/: Cargo.toml
macro/src/: dialect.rs  utility.rs
macro/src/dialect/: utility.rs
macro/src/dialect/operation/: attribute.rs
melior/: Cargo.toml
melior/src/: affine_expr.rs  context.rs  lib.rs
melior/src/dialect/: llvm.rs  ods.rs
melior/src/dialect/llvm/: type.rs
melior/src/ir/: affine_map.rs  type.rs
melior/src/ir/type/: integer_set.rs
melior/src/pass/: conversion.rs  sparse_tensor.rs
