[package]
name = "melior-macro"
description = "Internal macros for Melior"
version = "0.10.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
readme = "../README.md"
keywords = ["mlir", "llvm"]

[lib]
proc-macro = true

[dependencies]
comrak = "0.21.0"
convert_case = "0.6.0"
once_cell = "1.19.0"
proc-macro2 = "1"
quote = "1"
regex = "1.10.3"
syn = { version = "2", features = ["full"] }
tblgen = { git = "https://github.com/Tiggilyboo/tblgen-rs", branch="llvm18", features = ["llvm18-0"], default-features = false }
unindent = "0.2.3"

[dev-dependencies]
melior = { git = "https://github.com/Tiggilyboo/melior", branch="llvm18", features = ["ods-dialects"] }
mlir-sys = { git = "https://github.com/Tiggilyboo/mlir-sys", branch="llvm18" }
pretty_assertions = "1.4.0"
