[package]
name = "melior-macro"
description = "Internal macros for Melior"
version = "0.10.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
readme = "../README.md"
keywords = ["mlir", "llvm"]

[lib]
proc-macro = true

[dependencies]
comrak = { version = "0.21", default-features = false }
convert_case = { version = "0.6.0", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
regex = { version = "1.10.3", default-features = false }
syn = { version = "2", features = ["full"] }
unindent = { version = "0.2.3", default-features = false }
tblgen = { path = "../../tblgen-rs", features = ["llvm18-0"], default-features = false }

[dev-dependencies]
melior = { path = "../melior", features = ["ods-dialects"] }
mlir-sys = { path = "../../mlir-sys", default-features = false }
pretty_assertions = "1.4.0"
