[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.16.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
keywords = ["mlir", "llvm"]

[features]
ods-dialects = []

[dependencies]
melior-macro = { path = "../macro", default-features = false }
mlir-sys = { path = "../../mlir-sys", default-features = false }

[dev-dependencies]
indoc = "2.0.4"
insta = "1.35.1"
pretty_assertions = "1.4.0"
